# RagDocumentSearch

./: .gitignore  README.md
backend/: docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/api/: documents.py  ingest.py  query.py
backend/app/core/: chunker.py  config.py  embedder.py  hybrid_retriever.py  prompt.py  reranker.py  retriever.py
backend/app/db/: init_db.py  models.py  session.py
backend/app/schemas/: document.py  query.py
backend/app/services/: llm.py
backend/rag_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: hybridretrieverTest.py  reranker_test.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  styles.css
frontend/src/components/: Answer.jsx  AskPanel.jsx  Sidebar.jsx  Sources.jsx
