[project]
name = "rag-backend"
version = "0.1.0"
requires-python = ">=3.11"

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.29.0",          # async postgres driver
  "alembic>=1.13.0",
  "pgvector>=0.2.5",           # pgvector SQLAlchemy type
  "openai>=1.30.0",
  "pypdf>=4.2.0",              # PDF parsing
  "python-multipart>=0.0.9",   # file upload support
  "tiktoken>=0.7.0",           # token counting
  "python-dotenv>=1.0.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",             # test client
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"